# server/swagger/openapi.json
@@ -2,8 +2,8 @@
   "openapi": "3.0.0",
   "info": {
     "version": "1.0.0",
-    "title": "zexLLM Developer API",
-    "description": "API endpoints that enable programmatic reading, writing, and updating of your zexLLM instance. UI supplied by Swagger.io."
+    "title": "AnythingLLM Developer API",
+    "description": "API endpoints that enable programmatic reading, writing, and updating of your ZexAiLLM instance. UI supplied by Swagger.io."
   },
   "servers": [
     {
@@ -843,7 +843,7 @@
         "tags": [
           "Documents"
         ],
-        "description": "Upload a new file to zexLLM to be parsed and prepared for embedding.",
+        "description": "Upload a new file to AnythingLLM to be parsed and prepared for embedding.",
         "parameters": [],
         "responses": {
           "200": {
@@ -857,14 +857,14 @@
                     "error": null,
                     "documents": [
                       {
-                        "location": "custom-documents/zexllm.txt-6e8be64c-c162-4b43-9997-b068c0071e8b.json",
-                        "name": "zexllm.txt-6e8be64c-c162-4b43-9997-b068c0071e8b.json",
-                        "url": "file://Users/tim/Documents/zex-llm/collector/hotdir/zexllm.txt",
-                        "title": "zexllm.txt",
+                        "location": "custom-documents/anythingllm.txt-6e8be64c-c162-4b43-9997-b068c0071e8b.json",
+                        "name": "anythingllm.txt-6e8be64c-c162-4b43-9997-b068c0071e8b.json",
+                        "url": "file://Users/tim/Documents/anything-llm/collector/hotdir/anythingllm.txt",
+                        "title": "anythingllm.txt",
                         "docAuthor": "Unknown",
                         "description": "Unknown",
                         "docSource": "a text file uploaded by the user.",
-                        "chunkSource": "zexllm.txt",
+                        "chunkSource": "anythingllm.txt",
                         "published": "1/16/2024, 3:07:00 PM",
                         "wordCount": 93,
                         "token_count_estimate": 115
@@ -919,7 +919,7 @@
         "tags": [
           "Documents"
         ],
-        "description": "Upload a valid URL for zexLLM to scrape and prepare for embedding.",
+        "description": "Upload a valid URL for AnythingLLM to scrape and prepare for embedding.",
         "parameters": [],
         "responses": {
           "200": {
@@ -934,17 +934,17 @@
                     "documents": [
                       {
                         "id": "c530dbe6-bff1-4b9e-b87f-710d539d20bc",
-                        "url": "file://usezex_com.html",
-                        "title": "usezex_com.html",
+                        "url": "file://useanything_com.html",
+                        "title": "useanything_com.html",
                         "docAuthor": "no author found",
                         "description": "No description found.",
                         "docSource": "URL link uploaded by the user.",
-                        "chunkSource": "https:zexllm.com.html",
+                        "chunkSource": "https:anythingllm.com.html",
                         "published": "1/16/2024, 3:46:33 PM",
                         "wordCount": 252,
-                        "pageContent": "zexLLM is the best....",
+                        "pageContent": "AnythingLLM is the best....",
                         "token_count_estimate": 447,
-                        "location": "custom-documents/url-usezex_com-c530dbe6-bff1-4b9e-b87f-710d539d20bc.json"
+                        "location": "custom-documents/url-useanything_com-c530dbe6-bff1-4b9e-b87f-710d539d20bc.json"
                       }
                     ]
                   }
@@ -979,7 +979,7 @@
               "schema": {
                 "type": "object",
                 "example": {
-                  "link": "https://zexllm.com"
+                  "link": "https://anythingllm.com"
                 }
               }
             }
@@ -1015,7 +1015,7 @@
                         "chunkSource": "no chunk source specified",
                         "published": "1/16/2024, 3:46:33 PM",
                         "wordCount": 252,
-                        "pageContent": "zexLLM is the best....",
+                        "pageContent": "AnythingLLM is the best....",
                         "token_count_estimate": 447,
                         "location": "custom-documents/raw-my-doc-text-c530dbe6-bff1-4b9e-b87f-710d539d20bc.json"
                       }
@@ -1055,7 +1055,7 @@
               "schema": {
                 "type": "object",
                 "example": {
-                  "textContent": "This is the raw text that will be saved as a document in zexLLM.",
+                  "textContent": "This is the raw text that will be saved as a document in AnythingLLM.",
                   "metadata": {
                     "title": "This key is required. See in /server/endpoints/api/document/index.js:287",
                     "keyOne": "valueOne",
@@ -1238,7 +1238,7 @@
         "tags": [
           "Documents"
         ],
-        "description": "Get a single document by its unique zexLLM document name",
+        "description": "Get a single document by its unique AnythingLLM document name",
         "parameters": [
           {
             "name": "docName",
@@ -1790,12 +1790,12 @@
                     "history": [
                       {
                         "role": "user",
-                        "content": "What is zexLLM?",
+                        "content": "What is AnythingLLM?",
                         "sentAt": 1692851630
                       },
                       {
                         "role": "assistant",
-                        "content": "zexLLM is a platform that allows you to convert notes, PDFs, and other source materials into a chatbot. It ensures privacy, cites its answers, and allows multiple people to interact with the same documents simultaneously. It is particularly useful for businesses to enhance the visibility and readability of various written communications such as SOPs, contracts, and sales calls. You can try it out with a free trial to see if it meets your business needs.",
+                        "content": "AnythingLLM is a platform that allows you to convert notes, PDFs, and other source materials into a chatbot. It ensures privacy, cites its answers, and allows multiple people to interact with the same documents simultaneously. It is particularly useful for businesses to enhance the visibility and readability of various written communications such as SOPs, contracts, and sales calls. You can try it out with a free trial to see if it meets your business needs.",
                         "sources": [
                           {
                             "source": "object about source document and snippets used"
@@ -1906,7 +1906,7 @@
                   "custom-documents/my-pdf.pdf-hash.json"
                 ],
                 "deletes": [
-                  "custom-documents/zexllm.txt-hash.json"
+                  "custom-documents/anythingllm.txt-hash.json"
                 ]
               }
             }
@@ -1998,7 +1998,7 @@
                     "textResponse": "Response to your query",
                     "sources": [
                       {
-                        "title": "zexllm.txt",
+                        "title": "anythingllm.txt",
                         "chunk": "This is a context chunk used in the answer of the prompt by the LLM,"
                       }
                     ],
@@ -2037,7 +2037,7 @@
           "content": {
             "application/json": {
               "example": {
-                "message": "What is zexLLM?",
+                "message": "What is AnythingLLM?",
                 "mode": "query | chat",
                 "sessionId": "identifier-to-partition-chats-by-external-id",
                 "attachments": [
@@ -2101,7 +2101,7 @@
                       "textResponse": "final chunk of LLM output!",
                       "sources": [
                         {
-                          "title": "zexllm.txt",
+                          "title": "anythingllm.txt",
                           "chunk": "This is a context chunk used in the answer of the prompt by the LLM. This will only return in the final chunk."
                         }
                       ],
@@ -2139,7 +2139,7 @@
           "content": {
             "application/json": {
               "example": {
-                "message": "What is zexLLM?",
+                "message": "What is AnythingLLM?",
                 "mode": "query | chat",
                 "sessionId": "identifier-to-partition-chats-by-external-id",
                 "attachments": [
@@ -2435,11 +2435,11 @@
                   "example": [
                     {
                       "role": "user",
-                      "content": "What is zexlLM?"
+                      "content": "What is AnythinglLM?"
                     },
                     {
                       "role": "assistant",
-                      "content": "zexLLM is a knowledge graph and vector database management system built using NodeJS express server. It provides an interface for handling all interactions, including vectorDB management and LLM (Language Model) interactions."
+                      "content": "AnythingLLM is a knowledge graph and vector database management system built using NodeJS express server. It provides an interface for handling all interactions, including vectorDB management and LLM (Language Model) interactions."
                     }
                   ]
                 }
@@ -2780,12 +2780,12 @@
                     "history": [
                       {
                         "role": "user",
-                        "content": "What is zexLLM?",
+                        "content": "What is AnythingLLM?",
                         "sentAt": 1692851630
                       },
                       {
                         "role": "assistant",
-                        "content": "zexLLM is a platform that allows you to convert notes, PDFs, and other source materials into a chatbot. It ensures privacy, cites its answers, and allows multiple people to interact with the same documents simultaneously. It is particularly useful for businesses to enhance the visibility and readability of various written communications such as SOPs, contracts, and sales calls. You can try it out with a free trial to see if it meets your business needs.",
+                        "content": "AnythingLLM is a platform that allows you to convert notes, PDFs, and other source materials into a chatbot. It ensures privacy, cites its answers, and allows multiple people to interact with the same documents simultaneously. It is particularly useful for businesses to enhance the visibility and readability of various written communications such as SOPs, contracts, and sales calls. You can try it out with a free trial to see if it meets your business needs.",
                         "sources": [
                           {
                             "source": "object about source document and snippets used"
@@ -2861,7 +2861,7 @@
                     "textResponse": "Response to your query",
                     "sources": [
                       {
-                        "title": "zexllm.txt",
+                        "title": "anythingllm.txt",
                         "chunk": "This is a context chunk used in the answer of the prompt by the LLM."
                       }
                     ],
@@ -2900,7 +2900,7 @@
           "content": {
             "application/json": {
               "example": {
-                "message": "What is zexLLM?",
+                "message": "What is AnythingLLM?",
                 "mode": "query | chat",
                 "userId": 1,
                 "attachments": [
@@ -2974,7 +2974,7 @@
                       "textResponse": "final chunk of LLM output!",
                       "sources": [
                         {
-                          "title": "zexllm.txt",
+                          "title": "anythingllm.txt",
                           "chunk": "This is a context chunk used in the answer of the prompt by the LLM. This will only return in the final chunk."
                         }
                       ],
@@ -3012,7 +3012,7 @@
           "content": {
             "application/json": {
               "example": {
-                "message": "What is zexLLM?",
+                "message": "What is AnythingLLM?",
                 "mode": "query | chat",
                 "userId": 1,
                 "attachments": [
@@ -3239,7 +3239,7 @@
           }
         },
         "requestBody": {
-          "description": "Send a prompt to the workspace with full use of documents as if sending a chat in zexLLM. Only supports some values of OpenAI API. See example below.",
+          "description": "Send a prompt to the workspace with full use of documents as if sending a chat in AnythingLLM. Only supports some values of OpenAI API. See example below.",
           "required": true,
           "content": {
             "application/json": {
@@ -3251,11 +3251,11 @@
                   },
                   {
                     "role": "user",
-                    "content": "What is zexLLM?"
+                    "content": "What is AnythingLLM?"
                   },
                   {
                     "role": "assistant",
-                    "content": "zexLLM is...."
+                    "content": "AnythingLLM is...."
                   },
                   {
                     "role": "user",
@@ -3323,7 +3323,7 @@
         "tags": [
           "OpenAI Compatible Endpoints"
         ],
-        "description": "List all the vector database collections connected to zexLLM. These are essentially workspaces but return their unique vector db identifier - this is the same as the workspace slug.",
+        "description": "List all the vector database collections connected to AnythingLLM. These are essentially workspaces but return their unique vector db identifier - this is the same as the workspace slug.",
         "parameters": [],
         "responses": {
           "200": {
