# server/utils/AiProviders/novita/index.js
@@ -27,8 +27,8 @@ class NovitaLLM {
       baseURL: this.basePath,
       apiKey: process.env.NOVITA_LLM_API_KEY ?? null,
       defaultHeaders: {
-        "HTTP-Referer": "https://zexllm.com",
-        "X-Novita-Source": "zexllm",
+        "HTTP-Referer": "https://anythingllm.com",
+        "X-Novita-Source": "anythingllm",
       },
     });
     this.model =
