# server/utils/vectorDbProviders/weaviate/index.js
@@ -203,7 +203,7 @@ const Weaviate = {
               .classCreator()
               .withClass({
                 class: camelCase(namespace),
-                description: `Class created by zexLLM named ${camelCase(
+                description: `Class created by AnythingLLM named ${camelCase(
                   namespace
                 )}`,
                 vectorizer: "none",
@@ -309,7 +309,7 @@ const Weaviate = {
           .classCreator()
           .withClass({
             class: camelCase(namespace),
-            description: `Class created by zexLLM named ${camelCase(
+            description: `Class created by AnythingLLM named ${camelCase(
               namespace
             )}`,
             vectorizer: "none",
